# harpia_test

./: COMMENTS.md  README.md  harpia.launch  launcher.py
csv/: mapa0_obstacles.csv  mapa2_obstacles.csv
json/: hardware.json  mapa_bkp.json  missao.json
pddl/: domain.pddl  domain1.pddl  domain2.pddl  plan.dot  plan.pddl  problem.pddl
results/: mission_log.json
src/decision_support/decision_support/: CMakeLists.txt  package.xml
src/decision_support/mission_fault_mitigation/: CMakeLists.txt  package.xml
src/decision_support/mission_fault_mitigation/scripts/: mission_fault_mitigation_server.py
src/decision_support/mission_goal_manager/: CMakeLists.txt  package.xml
src/decision_support/mission_goal_manager/scripts/: mission_goal_manager_server.py  mission_goal_manager_server_temporal_planing.py
src/decision_support/mission_planning/: CMakeLists.txt  package.xml
src/decision_support/mission_planning/scripts/: mission_planner_server.py  test_add_goal.py  test_client (copy).py  test_client.py
src/fault_detection/: CMakeLists.txt  package.xml
src/fault_detection/anomaly_detection/include/fault_detection/: DroneInfoCompiler.h
src/fault_detection/anomaly_detection/scripts/: anomaly_detector.py  listener.py
src/fault_detection/anomaly_detection/scripts/libs/: LandingController.py  NoiseGenerator.py  anomalyDetection.py  loadData.py  uavAction.py
src/fault_detection/anomaly_detection/scripts/libs/dependencies/: pca_model.pkl  scaler_model.pkl  tree_pca.pkl
src/fault_detection/anomaly_detection/scripts/libs/dependencies/LSTM_predictions_new.pkl/: keras_metadata.pb
src/fault_detection/anomaly_detection/scripts/libs/dependencies/LSTM_predictions_new.pkl/variables/: variables.data-00000-of-00001  variables.index
src/fault_detection/anomaly_detection/src/: DroneInfoCompiler.cpp
src/fault_detection/models_train/2.AnomalyDetection/: PID.py  VelocityController.py  generate_flight_data.py  reinforcement_hover.py
src/fault_detection/models_train/2.AnomalyDetection/Scripts/JupyterNotebook/: LSTM_Roll_Pitch_Yaw_Scaled.ipynb  LSTM_predictions_new.joblib  PCA_values  PCA_values1  network.gv  pca_model.pkl  tlog_converter.ipynb  tree.pkl  uav_values  uav_values1
src/fault_detection/models_train/2.AnomalyDetection/Scripts/JupyterNotebook/.ipynb_checkpoints/: LSTM_Roll_Pitch_Yaw_Scaled-checkpoint.ipynb  LSTM_Roll_Pitch_Yaw_not_Scaled-checkpoint.ipynb  LSTM_TPCT_alt_heading_not_Scaled-checkpoint.ipynb
src/fault_detection/models_train/2.AnomalyDetection/Scripts/JupyterNotebook/LSTM_predictions_new.pkl/: saved_model.pb
src/fault_detection/models_train/2.AnomalyDetection/Scripts/JupyterNotebook/LSTM_predictions_new1.pkl/: keras_metadata.pb  saved_model.pb
src/fault_detection/models_train/2.AnomalyDetection/Scripts/JupyterNotebook/LSTM_predictions_new1.pkl/variables/: variables.index
src/fault_detection/models_train/2.AnomalyDetection/Scripts/JupyterNotebook/postProcessing/: postProcessing.ipynb
src/fault_detection/models_train/2.AnomalyDetection/libs/: NoiseGenerator.py  anomalyDetection.py
src/fault_detection/models_train/3.ClusteringAlgorythm/Scripts/JupyterNotebook/KMeans_Clustering/: KMeans_Clustering.ipynb
src/fault_detection/weather_check/scripts/: test_client.py  weather_check_server.py
src/harpia_msgs/: CMakeLists.txt  package.xml
src/harpia_msgs/action/: MissionPlanner.action
src/harpia_msgs/msg/: Battery.msg  Camera.msg  ChangeMission.msg  ChangeMissionAceppet.msg  DronePose.msg  Frame.msg  Goal.msg  Map.msg  Mission.msg  Region.msg  RegionPoint.msg  SafetyParams.msg  UAV.msg
src/harpia_msgs/srv/: MissionFaultMitigation.srv  MissionGoalManager.srv  PathPlanning.srv  WeatherCheck.srv
src/path_planning/: CMakeLists.txt  package.xml
src/path_planning/scripts/: path_planning_server.py
src/path_planning/scripts/.ipynb_checkpoints/: knn_data_genetator-checkpoint.ipynb
src/path_planning/scripts/libs/.ipynb_checkpoints/: knn_data_genetator-checkpoint.ipynb
src/path_planning/scripts/libs/AG/: genetic.py  model.py  visualization.py
src/path_planning/scripts/libs/Behaviours/: behaviours.py
src/path_planning/scripts/libs/ChanceConstraint/: chance_constraint.py
src/path_planning/scripts/libs/KNN/.ipynb_checkpoints/: knn_train-checkpoint.ipynb
src/path_planning/scripts/libs/KNN/data/: data_0.csv  data_1.csv  data_2.csv  data_3.csv  results_ag_mapa_0.csv  results_ag_mapa_1.csv  results_pfp_mapa_0.csv  results_pfp_mapa_1.csv  results_rrt_mapa_0.csv  results_rrt_mapa_1.csv
src/path_planning/scripts/libs/KNN/models/: knn29.pickle  knnpickle_file_retrained  model_latest.pickle  model_latest_4.pickle  model_latest_f1.pickle
src/path_planning/scripts/libs/PotentialFieldPlanning/: potential_field_planning.py
src/path_planning/scripts/libs/RRT/: rrt.py
src/path_planning/scripts/libs/RayCasting/: raycasting.py
src/rosplan/rosplan_planning_system/launch/: interfaced_planning_system.launch
src/rosplan/rosplan_planning_system/launch/includes/: dispatch_interface.launch  parsing_interface.launch  planner_interface.launch
src/rosplan_interface_harpia/: CMakeLists.txt  package.xml
src/rosplan_interface_harpia/include/rosplan_interface_harpia/: RPHarpiaExecutor.h
src/rosplan_interface_harpia/src/: RPHarpiaExecutor.cpp
