<?xml version="1.0"?>
<package>
  <name>rosplan_interface_harpia</name>
  <version>0.0.0</version>
  <description>Interface for action dispatch</description>
  <maintainer email="veronica.vannini@usp.br">veronica</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>diagnostic_msgs</build_depend>
  <build_depend>flex</build_depend>
  <build_depend>glut</build_depend>
  <build_depend>rosplan_planning_system</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>rostest</build_depend>
  <build_depend>harpia_msgs</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>diagnostic_msgs</run_depend>
  <run_depend>flex</run_depend>
  <run_depend>glut</run_depend>
  <run_depend>rosplan_planning_system</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>rostest</run_depend>
  <run_depend>harpia_msgs</run_depend>

  <build_depend>actionlib_msgs</build_depend>  
  <run_depend>actionlib_msgs</run_depend>
  <export></export>
</package>
